[package]
edition = "2021"
name = "futures-codec-nom"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
bytes = "1.1.0"
futures-framed = {git = "https://github.com/futures-rs/framed.git"}
log = "0.4.16"
nom = "7.1.1"

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
